trying static files